# daskinsitu

./: .gitignore  README.rst  pyproject.toml
daskinsitu/: __init__.py  daskinsitu.py
tests/: test_daskinsitu.py
